fix(button): fixed issue with button text being left aligned on safari 10
There is an issue with Safari 10 where you are not able to set display flex for buttons in Safari
10.

https://github.com/telusdigital/tds/issues/425

--- a/src/components/Link/ButtonLink/ButtonLink.modules.scss
+++ b/src/components/Link/ButtonLink/ButtonLink.modules.scss
@@ -9,7 +9,7 @@ $secondary-bg-color: $color-secondary;
 }
 
 .primary {
-  composes: primary from '../../Button/Button.modules.scss';
+  composes: button primary from '../../Button/Button.modules.scss';
   composes: base;
 
   &:link,
@@ -23,7 +23,7 @@ $secondary-bg-color: $color-secondary;
 }
 
 .secondary {
-  composes: secondary from '../../Button/Button.modules.scss';
+  composes: button secondary from '../../Button/Button.modules.scss';
   composes: base;
 
   &:link,
@@ -37,7 +37,7 @@ $secondary-bg-color: $color-secondary;
 }
 
 .inverted {
-  composes: inverted from '../../Button/Button.modules.scss';
+  composes: button inverted from '../../Button/Button.modules.scss';
   composes: base;
 
   &:link,
